# od

./: .aider.conf.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  GROK.md  README.md  project_spec.md  pyproject.toml
.claude/rules/: global.md  python.md
.crules/modes/: BOOTSTRAPPER.md
.crules/tasks/review/: cli.md  config.md  entities.md  obsidian.md  resolve.md  sections.md  socket.md  state.md  vault.md
.crules/tasks/wip/: config.md  sections.md  socket.md
.cursor/rules/: global.mdc
.github/instructions/: global.instructions.md  python.instructions.md
.grok/agents/: coder.md  manager.md  swarm.md
.grok/rules/: 00-swarm-sop.md  10-python-style.md  20-git-and-version.md
.roorules/: python.md
docs/: 2026-07-14-od-module-map.md  2026-07-14-od-usage-spec.md
src/od/: cli.py  config.py  entities.py  obsidian.py  resolve.py  sections.py  socket.py  state.py  vault.py
tests/: test_cli.py  test_config.py  test_entities.py  test_obsidian.py  test_resolve.py  test_sections.py  test_socket.py  test_state.py  test_vault.py
