[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "od"
version = "0.2.0"
description = "Fast, low-typing CLI for Obsidian daily notes"
requires-python = ">=3.12"
dependencies = [
    "argcomplete",
]

[project.scripts]
od = "od.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
